tests/paczka1/fuzzy1/40272510.err
Error in line 21: hqS1ye S155 99,3
Error in line 22: hqS1ye S367 41,2
Error in line 19: Cu9 S367 77,8
Error in line 26: hqS1ye S723 7,0
Error in line 27: S155 S155 71,7
Error in line 34: su1tC6GI S367 36,7
Error in line 33: wXmU9Ih A174 63,9
Error in line 39: wXmU9Ih S723 12,8
